# datapipe

./: .gitignore  GSAM_env.yml  README.md  data_pipe_env.yml
Frames/: test_Depth_1738272421879.14868164062500.csv  test_depth.csv  test_rgb.raw
Output/Frame/: masked_pc_frame.ply
Output/vid4_pc/: filtered_000.ply  filtered_001.ply  filtered_002.ply  filtered_003.ply  filtered_004.ply  filtered_005.ply  filtered_006.ply  filtered_007.ply  filtered_008.ply  filtered_009.ply  filtered_010.ply  filtered_011.ply  filtered_012.ply  filtered_013.ply  filtered_014.ply  filtered_015.ply  filtered_016.ply  filtered_017.ply  filtered_018.ply  filtered_019.ply  filtered_020.ply  filtered_021.ply  filtered_022.ply  filtered_023.ply  filtered_024.ply  filtered_025.ply  filtered_026.ply  filtered_027.ply  filtered_028.ply  filtered_029.ply  filtered_030.ply  filtered_031.ply  filtered_032.ply  filtered_033.ply  filtered_034.ply  filtered_035.ply  filtered_036.ply  filtered_037.ply  filtered_038.ply  filtered_039.ply  (+194 more)
Scripts/: DINOv2_labeler.py  GSAM2_labeler.py  GSAM2_labeler_multi.py  GSAM_job.sh  GSAM_labeler.py  MK_rosnode_check.py  MK_tracking  MK_tracking.cpp  add_video_frame.py  extract_video.py  full_data_1_job.sh  full_data_all_job_arm12.sh  full_data_job_arm1.sh  full_data_job_arm2.sh  full_datapipe.sh  hand_label_app.py  lag_compensate.py  pano.py  ply2mp4.py  ply2mp4_minpt.py  png2mp4.py  read_bagMK.py  read_bagV3.py  read_bag_job.sh  ros_GSAM2_labeler.py  run_gsam2.py  test.py  test_job.sh  test_pc_match.py  video_job.sh
install/: local_setup.sh  setup.sh
install/ros2_ws/share/ros2_ws/: package.dsv  package.ps1  package.sh
install/smartbelt_segmentation/lib/smartbelt_segmentation/: mk_pc_seg  mk_rgb_seg  mk_rgb_seg_bag
install/smartbelt_segmentation/share/ament_index/resource_index/package_run_dependencies/: smartbelt_segmentation
install/smartbelt_segmentation/share/smartbelt_segmentation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smartbelt_segmentation/share/smartbelt_segmentation/launch/: rgb_segmentation.launch.py  segmentation.launch.py  segmentation.launch.xml
log/: latest_build
ros2_ws/: CMakeLists.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/smartbelt_segmentation/lib/smartbelt_segmentation/: mk_matching_ptcld  mk_pc_seg  mk_rgb_seg  mk_rgb_seg_bag
ros2_ws/install/smartbelt_segmentation/share/ament_index/resource_index/package_run_dependencies/: smartbelt_segmentation
ros2_ws/install/smartbelt_segmentation/share/ament_index/resource_index/parent_prefix_path/: smartbelt_segmentation
ros2_ws/install/smartbelt_segmentation/share/smartbelt_segmentation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros2_ws/install/smartbelt_segmentation/share/smartbelt_segmentation/cmake/: smartbelt_segmentationConfig-version.cmake  smartbelt_segmentationConfig.cmake
ros2_ws/install/smartbelt_segmentation/share/smartbelt_segmentation/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/smartbelt_segmentation/share/smartbelt_segmentation/launch/: downsample.launch.py  rgb_segmentation.launch.py  segmentation.launch.py  segmentation.launch.xml
ros2_ws/log/: latest_build
ros2_ws/src/: MK_matching_ptcld.cpp
ros2_ws/src/smartbelt_segmentation/: CMakeLists.txt  README.md
ros2_ws/src/smartbelt_segmentation/launch/: downsample.launch.py  rgb_segmentation.launch.py  segmentation.launch.py
ros2_ws/src/smartbelt_segmentation/scripts/: reliability_override.yaml  run_gsam2.py
ros2_ws/src/smartbelt_segmentation/src/: MK_matching_ptcld.cpp  MK_pc_seg.cpp  MK_rgb_seg.cpp  MK_rgb_seg_bag.cpp
rosbag2_2025_01_29-14_28_25/: metadata.yaml  rosbag2_2025_01_29-14_28_25_0.db3
smartbelt_segmentation/: CMakeLists.txt
smartbelt_segmentation/src/: MK_matching_ptcld.cpp
